--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "twit-book-prjt2",
   "version": "1.0.0",
   "description": "Project 2",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/rbarnett2018/Twit-Book-Project-2#readme",
   "dependencies": {
+    "async": "^3.2.3",
+    "body-parser": "^1.19.1",
     "dotenv": "^11.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
